--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
-    <title>Progrative | | Level ○</title>
+    <title>Progrative | Intermesiate | Level 1</title>
 
     <!-- CSS 読み込み -->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -50,18 +50,10 @@
     <script defer src="./assets/js/index.js"></script>
   </head>
   <body>
-    <header class="sticky w-full left-0 top-0 z-10 px-[20px] md:px-8 lg:px-14 pt-[20px] md:pt-[32px]">
-      <div class="text-3xl font-bold w-[172px] md:w-[281px]">
-        <img src="./assets/images/header.svg" alt="" />
-      </div>
-    </header>
+    <header class=""></header>
 
     <main class=""></main>
 
-    <footer class="bg-black text-white py-1">
-      <div class="flex justify-center items-center text-sm text-gray1 font-noto font-bold">© Progrative by <span class="font-roboto ml-1"> TERRART 2022</span>.</div>
-    </footer>
-
-    <div id="sidebar"></div>
+    <footer class=""></footer>
   </body>
 </html>
